
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_14__ TYPE_5__ ;
typedef struct TYPE_13__ TYPE_2__ ;
typedef struct TYPE_12__ TYPE_1__ ;


struct TYPE_12__ {char* ptr; } ;
typedef TYPE_1__ robj ;
struct TYPE_13__ {int argc; TYPE_1__** argv; } ;
typedef TYPE_2__ client ;
struct TYPE_14__ {int syntaxerr; } ;


 int OBJ_SET_EX ;
 int OBJ_SET_NO_FLAGS ;
 int OBJ_SET_NX ;
 int OBJ_SET_PX ;
 int OBJ_SET_XX ;
 int UNIT_MILLISECONDS ;
 int UNIT_SECONDS ;
 int addReply (TYPE_2__*,int ) ;
 int setGenericCommand (TYPE_2__*,int,TYPE_1__*,TYPE_1__*,TYPE_1__*,int,int *,int *) ;
 TYPE_5__ shared ;
 TYPE_1__* tryObjectEncoding (TYPE_1__*) ;

void setCommand(client *c) {
    int j;
    robj *expire = ((void*)0);
    int unit = UNIT_SECONDS;
    int flags = OBJ_SET_NO_FLAGS;

    for (j = 3; j < c->argc; j++) {
        char *a = c->argv[j]->ptr;
        robj *next = (j == c->argc-1) ? ((void*)0) : c->argv[j+1];

        if ((a[0] == 'n' || a[0] == 'N') &&
            (a[1] == 'x' || a[1] == 'X') && a[2] == '\0' &&
            !(flags & OBJ_SET_XX))
        {
            flags |= OBJ_SET_NX;
        } else if ((a[0] == 'x' || a[0] == 'X') &&
                   (a[1] == 'x' || a[1] == 'X') && a[2] == '\0' &&
                   !(flags & OBJ_SET_NX))
        {
            flags |= OBJ_SET_XX;
        } else if ((a[0] == 'e' || a[0] == 'E') &&
                   (a[1] == 'x' || a[1] == 'X') && a[2] == '\0' &&
                   !(flags & OBJ_SET_PX) && next)
        {
            flags |= OBJ_SET_EX;
            unit = UNIT_SECONDS;
            expire = next;
            j++;
        } else if ((a[0] == 'p' || a[0] == 'P') &&
                   (a[1] == 'x' || a[1] == 'X') && a[2] == '\0' &&
                   !(flags & OBJ_SET_EX) && next)
        {
            flags |= OBJ_SET_PX;
            unit = UNIT_MILLISECONDS;
            expire = next;
            j++;
        } else {
            addReply(c,shared.syntaxerr);
            return;
        }
    }

    c->argv[2] = tryObjectEncoding(c->argv[2]);
    setGenericCommand(c,flags,c->argv[1],c->argv[2],expire,unit,((void*)0),((void*)0));
}
